<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".activity.UserInfoActivity">
    <LinearLayout
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp16"
            android:layout_height="@dimen/dp16"
            android:src="@mipmap/common_icon_white_n"
            android:id="@+id/iv_userinfo_back"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >
            <TextView
                android:layout_marginRight="@dimen/dp36"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/sp16"
                android:text="@string/wodexinxi"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/touxiang"
            />
        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="@dimen/dp42"
            android:layout_height="@dimen/dp42"
            fresco:placeholderImage="@mipmap/dermatology"
            android:id="@+id/iv_userinfo_headicon"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nicheng"
            />
        <TextView
            android:layout_marginRight="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nicheng"
            android:id="@+id/tv_userinfo_username"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_userinfo_change_username"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xingbie"
            />
        <ImageView
            android:layout_marginRight="@dimen/dp10"
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/common_icon_boy_n"
            android:id="@+id/iv_userinfo_sex"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_userinfo_change_sex"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tizheng"
            />
        <LinearLayout
            android:layout_marginRight="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shengao"
                android:textSize="@dimen/sp14"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="185"
                android:textSize="@dimen/sp12"
                android:id="@+id/tv_userinfo_hight"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tizhong"
                android:textSize="@dimen/sp14"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="75"
                android:textSize="@dimen/sp12"
                android:id="@+id/tv_userinfo_weight"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ninaling"
                android:textSize="@dimen/sp14"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textSize="@dimen/sp12"
                android:id="@+id/tv_userinfo_years"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_userinfo_tizheng"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/youxiang"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp12"
            android:text="909827027@qq.com"
            android:id="@+id/iv_userinfo_email"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bangdingweixin"
            />
        <TextView
            android:layout_marginRight="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qubangding"
            android:id="@+id/tv_userinfo_bindwx"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_userinfo_bindwx"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shimingrenzheng"
            />
        <TextView
            android:layout_marginRight="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp12"
            android:text="@string/qurenzheng"
            android:id="@+id/tv_userinfo_renzheng"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_userinfo_certification"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bangdingyinhangka"
            />
        <TextView
            android:layout_marginRight="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qubangding"
            android:id="@+id/tv_userinfo_bindyhk"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_userinfo_bindyhk"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
</LinearLayout>