<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp30"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_task_back"
            android:layout_width="@dimen/dp16"
            android:layout_height="@dimen/dp16"
            android:src="@mipmap/common_icon_white_n" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sp16"
                android:layout_marginRight="@dimen/dp36"
                android:text="@string/woderenwu" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:layout_marginTop="@dimen/dp10"
        android:background="@color/viewbackground" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp36"
                    android:background="@mipmap/my_task_title"
                    android:gravity="center"
                    android:text="@string/qiandaotiao"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lianxuqiandao"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp10" />
            </LinearLayout>

            <com.wd.my.view.Signin
                android:id="@+id/signin_customview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp36"
                android:layout_marginTop="@dimen/dp10"
                android:background="@mipmap/my_task_title"
                android:gravity="center"
                android:text="@string/meirirenwu"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_task_everyday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp250" />

            <TextView
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp36"
                android:layout_marginTop="@dimen/dp10"
                android:background="@mipmap/my_task_title"
                android:gravity="center"
                android:text="@string/yicixingrenwu"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_task_onlyone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp320" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>