<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FDFDFE"
    tools:context=".activity.SetActivity">
    <LinearLayout
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp16"
            android:layout_height="@dimen/dp16"
            android:src="@mipmap/common_icon_white_n"
            android:id="@+id/iv_set_back"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >
            <TextView
                android:layout_marginRight="@dimen/dp36"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/sp16"
                android:text="@string/sehzhi"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:gravity="center"
        >
        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="@dimen/dp42"
            android:layout_height="@dimen/dp42"
            fresco:placeholderImage="@mipmap/dermatology"
            android:id="@+id/iv_set_headicon"
            />
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="用户名"
            android:id="@+id/tv_set_username"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_userinfo"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xiugaimima"
            android:textSize="@dimen/sp14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_changepwd"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qingchuhuancun"
            android:textSize="@dimen/sp14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_cleanchache"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pingmuliangdu"
            android:textSize="@dimen/sp14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_light"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banbenjiance"
            android:textSize="@dimen/sp14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_checkversion"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bangzhuzhongxin"
            android:textSize="@dimen/sp14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_helpcenter"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gunayuwomen"
            android:textSize="@dimen/sp14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_aboutus"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaoqinghaoyou"
            android:textSize="@dimen/sp14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:src="@mipmap/my_icon_next_n"
            android:id="@+id/iv_set_invitefriends"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuichudenglu"
        android:textColor="@color/red"
        android:textSize="@dimen/sp14"
        android:id="@+id/tv_set_quitlogin"
        />
    <View
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:background="@color/viewbackground"
        />
</LinearLayout>